syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "IndexRecordProto";
option java_multiple_files = true;

import "record_metadata_options.proto";
import "fdb/parent_table_name.proto";

// store current schema of the index. Index can be materialized view or secondary index
message IndexRecord {
  required int32 primary_key = 1;
  required string project_id = 2;
  required string catalog_id = 3;
  required string database_id = 4;
  required string index_id = 5;
  required string name = 6;
  repeated ParentTableName parent_table_name = 7;
  optional int64  created_time = 8;
  optional string comment = 9;
  required string catalog_name = 10;
  required string database_name = 11;
}

message IndexRecordUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required IndexRecord indexRecord = 1;
}